# focus

./: .arcconfig  .editorconfig  .gitignore  .gitmodules  .mailmap  CONTRIBUTING.md  Cargo.toml  PROJECT  README.md
content-addressed-cache/: Cargo.toml
content-addressed-cache/src/: lib.rs  local_cache.rs  synchronizer.rs
focus/commands/: Cargo.toml  build.rs
focus/commands/examples/: calc_invalidation_rate.rs
focus/commands/src/cli/: TODO.org  app.rs  backed_up_file.rs  coordinate.rs  coordinate_resolver.rs  detail.rs  git_helper.rs  main.rs  manager.rs  model.md  model.rs  sandbox.rs  sandbox_command.rs  sparse_repos.rs  tool.rs  tracker.rs  ui.rs  working_tree_synchronizer.rs
focus/commands/src/cli/coordinate_resolver/: bazel_resolver.rs  directory_resolver.rs  mod.rs  pants_resolver.rs
focus/commands/src/cli/subcommands/: adhoc.rs  available_layers.rs  clone.rs  current_layers.rs  detect_build_graph_changes.rs  init.rs  invalidate.rs  layer.rs  list_repos.rs  maintenance.rs  manager.rs  mod.rs  outline.rs  pop_layer.rs  push_layer.rs  reapply.rs  refs.rs  remove_layer.rs  repo.rs  selected_layers.rs  server.rs  summarize_state.rs  sync.rs  user_interface_test.rs
focus/commands/src/cli/testing/: mod.rs  scratch_git_repo.rs
focus/commands/src/cli/util/: backed_up_file.rs  git_helper.rs  mod.rs  periodic.rs  sandbox.rs  sandbox_command.rs
focus/commands/src/common/: lib.rs
focus/commands/src/git-remote/: main.rs
focus/commands/src/parachute/: TODO.org  client.rs  detail.rs  main.rs  sandbox.rs  sparse_repos.rs  util.rs  working_tree_synchronizer.rs
focus/commands/src/parachute/testing/: git_test_helper.rs  mod.rs  scratch_git_repo.rs
focus/commands/src/server/: endpoint.rs  main.rs  objectstore.rs  server.rs
focus/commands/src/server/endpoint/: unix.rs
focus/commands/src/treesnap/: detail.rs  journal.rs  main.rs
focus/delegate/: Cargo.toml  bindings.h  build.rs
focus/delegate/src/: lib.rs
focus/filesystem/: Cargo.toml  build.rs  loopback.c
focus/formats/: Cargo.toml  build.rs
focus/formats/proto/: analysis.proto  journal.proto  parachute.proto  storage.proto  testing.proto  treesnap.proto
focus/formats/src/: lib.rs
focus/internals/: Cargo.toml
focus/internals/benches/: bench_content_hash.rs
focus/internals/src/: caching.rs  error.rs  lib.rs  tokentab.rs  ttl_cache.rs
focus/internals/src/config/: fs.rs  mod.rs  paths.rs  structures.rs
focus/internals/src/constants/: mod.rs
focus/internals/src/fixtures/: mod.rs  scm.rs
focus/internals/src/lib/: app.rs  coordinate.rs  hashing.rs  lib.rs  locking.rs  model.rs  sparse_repos.rs  target.rs  tracker.rs  ui.rs  working_tree_synchronizer.rs
focus/internals/src/lib/coordinate_resolver/: bazel_de.rs  bazel_resolver.rs  directory_resolver.rs  mod.rs  pants_resolver.rs
focus/internals/src/lib/index/: churn.rs  content_hash.rs  dependency_graph.rs  mod.rs  object_database.rs
focus/internals/src/lib/model/: data_paths.rs  layering.rs  mod.rs  outlining.rs  persistence.rs  project.rs  repo.rs
focus/internals/src/lib/operation/: adhoc.rs  clone.rs  detect_build_graph_changes.rs  ensure_clean.rs  event.rs  index.rs  init.rs  layer.rs  mod.rs  project.rs  refs.rs  repo.rs  selection.rs  sync.rs  user_interface_test.rs  util.rs
focus/internals/src/lib/util/: mod.rs  (+10 more)
focus/internals/src/proto_file_stream/: mod.rs
focus/internals/src/repo/: mod.rs
focus/internals/src/storage/: rocks.rs
focus/internals/src/util/: lock_file.rs  mod.rs  periodic.rs
focus/migrations/: Cargo.toml
focus/migrations/src/: lib.rs  production.rs
focus/operations/: Cargo.toml
focus/operations/benches/: bench_sync.rs
focus/operations/src/: background.rs  branch.rs  clone.rs  detect_build_graph_changes.rs  ensure_clean.rs  event.rs  filter.rs  index.rs  init.rs  lib.rs  mod.rs  project.rs  project_cache.rs  pull.rs  refs.rs  repo.rs  selection.rs  status.rs  sync.rs  util.rs
focus/operations/src/maintenance/: launchd.rs  mod.rs  scheduling.rs
focus/operations/src/snapshots/: focus_operations__sync__testing__clone_contains_top_level.snap  focus_operations__sync__testing__sync_layer_manipulation-2.snap  focus_operations__sync__testing__sync_layer_manipulation-3.snap  focus_operations__sync__testing__sync_layer_manipulation-4.snap  focus_operations__sync__testing__sync_layer_manipulation-5.snap  focus_operations__sync__testing__sync_layer_manipulation.snap
focus/operations/src/testing/: integration.rs  mod.rs  refs.rs  repo.rs  sync.rs  sync_with_project_cache.rs
focus/platform/: Cargo.toml
focus/platform/examples/: phabricator.rs
focus/platform/src/: lib.rs  phabricator.rs
focus/platform/src/session_state/: macos.rs  mod.rs
focus/repo-management/: Cargo.toml
focus/repo-management/src/: lib.rs
focus/repo_server_redis_module/: Cargo.toml
focus/repo_server_redis_module/src/: lib.rs  processor.rs
focus/testing/: Cargo.toml
focus/testing/src/: git_binary.rs  lib.rs  scratch_git_repo.rs
focus/tracing/: Cargo.toml
focus/tracing/src/: focus.rs  git_trace2.rs  lib.rs
focus/tracing/src/chrome/: mod.rs  tests.rs  trace.rs
focus/tracing/src/fixtures/: branch-update.json  clone-perf.json  push.json  reflog.json  status.json
focus/util/: Cargo.toml
focus/util/src/: app.rs  backed_up_file.rs  files.rs  git_helper.rs  lib.rs  lock_file.rs  paths.rs  periodic.rs  process.rs  sandbox_command.rs  stubs.rs  time.rs
focus/util/src/git/: mod.rs  model.rs  snapshot.rs  working_tree.rs
focus/util/src/sandbox/: cleanup.rs  mod.rs
metahook/: Cargo.toml
metahook/src/: main.rs
rce/repo_tools/: .coveragerc  .gitignore  .mypy.ini  AUTHORS.rst  LICENSE.txt  Pipfile  pyproject.toml  setup.cfg  setup.py
rce/repo_tools/config/: twgit.yaml
rce/repo_tools/docs/: conf.py  index.rst
rce/repo_tools/src/repo_tools/: expire_refs.py  namespace_dev_refs.py  rename_branches_by_author.py
rce/repo_tools/tests/: conftest.py
rce/repo_tools/types/pygit2/: __init__.pyi
tool_insights_client/: Cargo.toml
tool_insights_client/src/: client.rs  json_writer.rs  lib.rs  message.rs  util.rs  writer.rs
(+343 files in other folders)
