[workspace]
members = [
  "focus/commands",
  "focus/internals",
  "focus/operations",
  "focus/platform",
  "focus/repo-management",
  "focus/testing",
  "focus/tracing",
  "focus/util",
  "tool_insights_client",
  "content-addressed-cache",
]

[patch.crates-io]
git2 = { git = "https://github.com/bierbaum/git2-rs", rev = "a03dc826f17e668454a76150b9f5fbddda5297da" }
