[workspace]
members = [
  "focus/commands",
  "focus/internals",
  "focus/operations",
  "focus/platform",
  "focus/repo-management",
  "focus/testing",
  "focus/tracing",
  "focus/util",
  "tool_insights_client",
  "content-addressed-cache",
]

[patch.crates-io]
git2 = { git = "https://github.com/bierbaum/git2-rs", rev = "52716b2148888cf9a3b605eed9414544c12a778f" }
