[package]
name = "content-addressed-cache"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
ciborium = "0.2.0"
git2 = { git = "https://github.com/bierbaum/git2-rs", rev = "52716b2148888cf9a3b605eed9414544c12a778f", features = [
    "vendored-libgit2",
] }
focus-util = { path = "../focus/util" }
rand = "0.6.3"
rocksdb = "0.18.0"
tempfile = "3.2.0"
thiserror = "1.0.30"
tracing = "0.1.32"
hex = "0.3.1"