[package]
name = "metahook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.45"
chrono = "0.4"
clap = { version = "3.1.0", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.9.0"
nix = "0.23.0"
once_cell = "1.4.0"
rand = "0.8.4"
rayon = "1.5.1"
regex = "1.5.4"
tempfile = "3.2.0"
thiserror = "1.0.30"
tracing = "0.1.31"
walkdir = "2.3.2"

[[bin]]
name = "metahook"
path = "src/main.rs"

[features]
