[package]
name = "tool-insights-client"
description = """
Library to instrument tools via the tool insights service.
The library, currently, is only useful on MacOS since it relies on the
tool insights daemon to upload the logs to tool insights service.
"""
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
libc = "0.2.124"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "2.1.0"
tempfile = "3.3.0"
uuid = { version = "0.8.2", features = ["v4"] }
whoami = "1.2.1"
tracing = "0.1.31"

[dev-dependencies]
maplit = "1.0.2"
