[package]
name = "focus-commands"
version = "0.3.3"
authors = [
  "Wilhelm Bierbaum <wilhelm@twitter.com>",
  "Jonathan Simms <jsimms@twitter.com>"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.45"
chrono = "0.4"
clap = { version = "3.1.0", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.9.0"
focus-internals = { path = "../internals" }
git2 = { version = "0.13.23", default-features = false }
lazy_static = "1.4.0"
nix = "0.23.0"
plist = "1.3.1"
pretty-hex = "0.2.1"
prost = "0.9.0"
protobuf = "2.25.2"
rand = "0.8.4"
rayon = "1.5.1"
regex = "1.5.4"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
sha2 = "0.9.8"
signal-hook = "0.3.10"
strum = "0.24.0"
strum_macros = "0.24.0"
tempfile = "3.2.0"
termion = "1.5.6"
thiserror = "1.0.30"
tracing = "0.1.31"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
walkdir = "2.3.2"

##
## Focus CLI: The primary UI for Project Focused Development
##
[[bin]]
name = "focus"
path = "src/cli/main.rs"

[features]
