[package]
name = "focus-commands"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.45"
chrono = "0.4"
clap = { version = "3.1.7", features = ["derive", "env", "wrap_help"] }
dirs = "4.0.0"
focus-internals = { path = "../internals" }
focus-migrations = { path = "../migrations" }
focus-testing = { path = "../testing" }
focus-tracing = { path = "../tracing" }
focus-util = { path = "../util" }
git2 = { git = "https://github.com/bierbaum/git2-rs", rev = "52716b2148888cf9a3b605eed9414544c12a778f", features = [
  "vendored-libgit2",
] }
lazy_static = "1.4.0"
nix = "0.23.0"
rand = "0.8.4"
rayon = "1.5.1"
regex = "1.5.4"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
strum = "0.24.0"
strum_macros = "0.24.0"
tempfile = "3.2.0"
termion = "1.5.6"
thiserror = "1.0.30"
tracing = "0.1.31"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
walkdir = "2.3.2"

##
## Focus CLI: The primary UI for Project Focused Development
##
[[bin]]
name = "focus"
path = "src/cli/main.rs"

[features]
