[package]
name = "focus-delegate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
focus-internals = { path = "../internals" }
anyhow = "1.0.38"
log = "0.4.14"
thiserror = "1.0.23"
env_logger = "0.8.3"
rocksdb = "0.16.0"
libc = "0.2.95"

[lib]
name = "focus_delegate"
crate-type = ["cdylib"]
