[package]
name = "focus-delegate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
focus-internals = { path = "../internals" }
focus-formats = { path = "../formats" }
anyhow = "1.0.38"
log = "0.4.14"
thiserror = "1.0.23"
env_logger = "0.8.3"
rocksdb = "0.16.0"
libc = "0.2.95"
prost = "0.7"
tonic = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "fs"] }
tokio-stream = "0.1"
async-stream = "0.3"
tower = "0.4.8"
futures-util = "0.3.15"
lazy_static = "1.4.0"

[build-dependencies]
cbindgen = "0.19.0"

[lib]
name = "focus_delegate"
crate-type = ["cdylib"]
