[package]
name = "filesystem"
version = "0.1.0"
authors = ["Wilhelm Bierbaum <wilhelm@twitter.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.43"
dirs = "3.0.2"
env_logger = "0.9.0"
log = "0.4.14"
nix = "0.22.1"
signal-hook = "0.3.10"
thiserror = "1.0.28"

[build-dependencies]
cc = "1.0"

[lib]
name = "internals"
path = "src/lib.rs"

[target.x86_64-apple-darwin]
# rustc-flags = "-D_FILE_OFFSET_BITS=64 -D_DARWIN_USE_64_BIT_INODE"
rustc-link-lib = ["osxfuse"]
rustc-link-search = ["/usr/local/lib"]

# rustc-flags = "-L /usr/local/lib"
# rustc-cfg = ['key="value"']
# rustc-env = {key = "value"}
# rustc-cdylib-link-arg = ["-losxfuse.2"]

# runner = "foo"  # Searches `PATH` for `foo`.
