[package]
name = "focus-formats"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0.38"
# log = "0.4.13"
# env_logger = "0.8.2"
# thiserror = "1.0.23"
# dirs = "3.0.1"
prost = "0.8.0"

[build-dependencies]
prost-build = "0.8.0"

