[package]
name = "focus-internals"
version = "0.5.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.45", features = ["backtrace"] }
chrono = { version = "0.4", features = ["serde"] }
content-addressed-cache = { path = "../../content-addressed-cache" }
crossbeam = "0.8.2"
dirs = "4.0.0"
focus-util = { path = "../util" }
git2 = { version = "0.14.2", features = [
  "vendored-libgit2",
  "vendored-openssl",
] }
lazy_static = "1.4.0"
nix = "0.23.0"
once_cell = "1.4.0"
rand = "0.8.4"
rayon = "1.5.1"
regex = "1.5.5"
reqwest = { version = "0.11.11", features = [ "blocking", "gzip" ] }
rocksdb = "0.19.0"
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
serde-xml-rs = "0.5.1"
serde_derive = "1.0.130"
serde_json = "1.0.68"
sha2 = "0.10.2"
tempfile = "3.2.0"
thiserror = "1.0.30"
tool-insights-client = { path = "../../tool_insights_client", optional = true }
tracing = "0.1.31"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
walkdir = "2.3.2"
which = "4.2.4"
whoami = "1.2.1"

[dev-dependencies]
focus-testing = { path = "../testing" }
criterion = "0.3.5"
insta = { version = "1.13.0", features = ["json"] }
maplit = "1.0.2"
tracing = "0.1.31"

[lib]
name = "focus_internals"
path = "src/lib/lib.rs"

[[bench]]
name = "bench_content_hash"
harness = false

[features]
twttr = ["dep:tool-insights-client", "focus-util/twttr"]
