[package]
name = "focus-migrations"
version = "0.5.7"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.45", features = ["backtrace"] }
focus-internals = { path = "../internals" }
focus-operations = { path = "../operations" }
git2 = { version = "0.14.2", features = [
  "vendored-libgit2",
  "vendored-openssl",
] }
lazy_static = "1.4.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
tempfile = "3.2.0"
tracing = "0.1.31"
tracing-appender = "0.2.1"
tracing-chrome = "0.4.0"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.9", features = [
  "json",
  "time",
  "env-filter",
  "fmt",
  "ansi",
  "registry",
  "std",
  "alloc",
] }

[dev-dependencies]
insta = "1.13.0"
tracing = "0.1.31"

[lib]
name = "focus_migrations"
path = "src/lib.rs"

[features]
twttr = ["focus-internals/twttr", "focus-operations/twttr"]
