[package]
name = "focus-operations"
version = "0.5.6"
edition = "2021"

[features]
ci = []
twttr = []

[dependencies]
anyhow = { version = "1.0.45", features = ["backtrace"] }
content-addressed-cache = { path = "../../content-addressed-cache" }
chrono = { version = "0.4", features = ["serde"] }
console = "0.15.0"
dirs = "4.0.0"
focus-internals = { path = "../internals" }
focus-platform = { path = "../platform" }
focus-util = { path = "../util" }
git2 = "0.14.2"
humantime = "2.1.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
nix = "0.23.0"
notify-rust = "4"
once_cell = "1.4.0"
plist = "1.3.1"
rand = "0.8.4"
regex = "1.5.5"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
serde-xml-rs = "0.5.1"
sha2 = "0.10.2"
skim = "0.9.4"
strum = "0.24.0"
strum_macros = "0.24.0"
tempfile = "3.2.0"
thiserror = "1.0.30"
tool-insights-client = { path = "../../tool_insights_client" }
tracing = "0.1.31"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
walkdir = "2.3.2"
which = "4.2.4"
whoami = "1.2.1"

[dev-dependencies]
assert_cmd = "2.0.4"
criterion = "0.3.5"
focus-testing = { path = "../testing" }
insta = { version = "1.13.0", features = ["yaml"] }
maplit = "1.0.2"
tracing = "0.1.31"

[[bench]]
name = "bench_sync"
harness = false
