[package]
name = "focus-platform"
version = "0.8.0"
edition = "2021"
description = "Platform specific utilities"

[dependencies]
chrono = { version = "0.4.21", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
thiserror = "1.0.32"

[features]
twttr = []
