[package]
name = "focus-repo-management"
version = "0.5.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.45"
chrono = "0.4"
clap = { version = "3.1.7", features = ["derive", "env", "wrap_help"] }
dirs = "4.0.0"
focus-internals = { path = "../internals" }
focus-testing = { path = "../testing" }
focus-tracing = { path = "../tracing" }
focus-util = { path = "../util" }
git2 = { git = "https://github.com/bierbaum/git2-rs", rev = "52716b2148888cf9a3b605eed9414544c12a778f", features = [
  "vendored-libgit2", "vendored-openssl",
] }
lazy_static = "1.4.0"
tempfile = "3.2.0"
termion = "1.5.6"
thiserror = "1.0.30"
tracing = "0.1.31"
