[package]
name = "focus-repo-management"
version = "0.5.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.45"
focus-internals = { path = "../internals" }
focus-testing = { path = "../testing" }
focus-tracing = { path = "../tracing" }
focus-util = { path = "../util" }
lazy_static = "1.4.0"
tempfile = "3.2.0"
termion = "1.5.6"
thiserror = "1.0.30"
tracing = "0.1.31"
