[package]
name = "focus-repo-server-module"
version = "0.1.0"
authors = ["Wilhelm Bierbaum <wilhelm@twitter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
focus-internals = { path = "../internals" }
anyhow = "1.0.38"
log = "0.4.14"
thiserror = "1.0.23"
dirs = "3.0.1"
git2 = { version = "0.13.15", default-features = false }
serde = "1.0.119"
serde_derive = "1.0.119"
signal-hook = "0.3.3"
structopt = "0.3.21"
tempfile = "3.2.0"
toml = "0.5.8"
uuid = { version = "0.8.2", features = ["v4"] }
crossbeam-utils = "0.8.1"
futures-channel = "0.3.11"
serde_json = "1.0.61"
env_logger = "0.8.3"
rocksdb = "0.16.0"
redis-module = { path = "../../redismodule-rs" } # "0.13.0"
pretty-hex = "0.2.1"

[lib]
name = "focus_redis_repo_server"
crate-type = ["cdylib"]
