[package]
name = "focus-testing"
version = "0.5.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.45", features = ["backtrace"] }
assert_cmd = "2.0.4"
git2 = "0.14.2"
tempfile = "3.2.0"
termion = "1.5.6"
tracing = "0.1.31"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.9", features = [
  "json",
  "time",
  "env-filter",
  "fmt",
  "ansi",
  "registry",
  "std",
  "alloc",
] }
uuid = { version = "0.8.2", features = ["v4"] }
which = "4.2.5"

[dev-dependencies]
insta = "1.13.0"
tracing = "0.1.31"

[package.metadata.cargo-udeps.ignore]
normal = ["tempfile"]

[lib]
name = "focus_testing"
path = "src/lib.rs"

[features]
twttr = []
