[package]
name = "focus-tracing"
version = "0.5.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.45", features = ["backtrace"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "4.0.0"
focus-testing = { path = "../testing" }
focus-util = { path = "../util" }
git2 = { git = "https://github.com/bierbaum/git2-rs", rev = "52716b2148888cf9a3b605eed9414544c12a778f", features = [
  "vendored-libgit2",
  "vendored-openssl",
] }
heck = "0.4.0"
lazy_static = "1.4.0"
nix = "0.23.0"
once_cell = "1.4.0"
rayon = "1.5.1"
regex = "1.5.5"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
strum = "0.24.0"
strum_macros = "0.24.0"
tempfile = "3.2.0"
tool-insights-client = { path = "../../tool_insights_client", optional = true }
tracing = "0.1.31"
tracing-appender = "0.2.1"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.9", features = [
  "json",
  "time",
  "env-filter",
  "fmt",
  "ansi",
  "registry",
  "std",
  "alloc",
] }
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
walkdir = "2.3.2"
which = "4.2.4"
whoami = "1.2.1"

[dev-dependencies]
insta = "1.13.0"
tracing = "0.1.31"

[package.metadata.cargo-udeps.ignore]
normal = ["focus-testing"]

[lib]
name = "focus_tracing"
path = "src/lib.rs"

[features]
twttr = ["dep:tool-insights-client"]
