[package]
name = "focus-util"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.45", features = ["backtrace"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "4.0.0"
focus-testing = { path = "../testing" }
git2 = { git = "https://github.com/bierbaum/git2-rs", rev = "52716b2148888cf9a3b605eed9414544c12a778f", features = [
  "vendored-libgit2",
] }
lazy_static = "1.4.0"
nix = "0.23.0"
once_cell = "1.4.0"
regex = "1.5.5"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
tempfile = "3.2.0"
termion = "1.5.6"
tool-insights-client = { path = "../../tool_insights_client" }
tracing = "0.1.31"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
which = "4.2.4"
whoami = "1.2.1"

[package.metadata.cargo-udeps.ignore]
normal = ["focus-testing"]


[dev-dependencies]
insta = "1.13.0"
tracing = "0.1.31"

[lib]
name = "focus_util"
path = "src/lib.rs"
