[package]
name = "focus-util"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.45", features = ["backtrace"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "4.0.0"
filetime = "0.2"
focus-testing = { path = "../testing" }
git2 = { version = "0.15", features = [
  "vendored-libgit2",
  "vendored-openssl",
] }
hex = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
nix = "0.23.0"
once_cell = "1.4.0"
regex = "1.5.5"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
sha2 = "0.10.2"
tar = { version = "0.4.38", features = ["xattr"] }
tempfile = "3.2.0"
termion = "1.5.6"
tool-insights-client = { path = "../../tool_insights_client", optional = true }
tracing = "0.1.31"
url = "2.2.2"
uuid = { version = "0.8.2", features = ["v4"] }
which = "4.2.4"
whoami = "1.2.1"
walkdir = "2.3.2"

[package.metadata.cargo-udeps.ignore]
normal = ["focus-testing", "termion"]

[dev-dependencies]
assert_cmd = "2.0.4"
insta = "1.13.0"
tracing = "0.1.31"

[lib]
name = "focus_util"
path = "src/lib.rs"

[features]
twttr = ["dep:tool-insights-client", "focus-testing/twttr"]
