
[build-system]
  build-backend = "setuptools.build_meta"
  requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]

[tool]

  [tool.pyright]
    exclude = ["**/node_modules", "**/__pycache__"]
    ignore = [".venv/lib/python*/site-packages/pygit2/**"]
    include = ["src"]
    reportMissingImports = true
    reportMissingTypeStubs = false
    stubPath = "types"
    venvPath = ".venv"

  [tool.setuptools_scm]
    root = "../.."
    version_scheme = "no-guess-dev"

  [tool.yapf]
    based_on_style = "google"
    column_limit = 100
    dedent_closing_brackets = true
    indent_width = 2

  [tool.isort]
    multi_line_output = 5 # hanging grid grouped
    balanced_wrapping = true
    line_length = 100
    indent = 2
    atomic = true
    include_trailing_comma = true
    force_alphabetical_sort_within_sections = true

  [tool.pytest.ini_options]
    testpaths = ["tests"]


# vim:ft=toml:et:ts=2:sw=2
